--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -11,7 +11,7 @@ parameters:
 
 framework:
     #esi: ~
-    #translator: { fallbacks: ['%locale%'] }
+    translator: { fallbacks: ['%locale%'] }
     secret: '%secret%'
     router:
         resource: '%kernel.project_dir%/app/config/routing.yml'
@@ -76,3 +76,6 @@ fos_user:
     from_email:
         address: "no-reply@e-commerce.com"
         sender_name: "e-commerce"
+    registration:
+        form:
+            type: CoreBundle\Form\Type\RegistrationFormType
