--- a/src/CoreBundle/Resources/config/routing.yml
+++ b/src/CoreBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 _core:
-    path:     /
-    defaults: { _controller: CoreBundle:Default:index }
+    resource: "@CoreBundle/Controller"
+    type:     annotation
