Fixed login/logout redirection and updated the navbar

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -26,8 +26,12 @@ security:
             form_login:
                 provider: fos_userbundle
                 csrf_token_generator: security.csrf.token_manager
+                login_path: /login
+                default_target_path: /product/
 
-            logout:       true
+            logout:
+                path:   /logout
+                target: /product/
             anonymous:    true
 
     access_control:
