--- a/src/SalesBundle/Resources/config/routing.yml
+++ b/src/SalesBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-sales_homepage:
-    path:     /
-    defaults: { _controller: SalesBundle:Default:index }
+_sales:
+    resource: "@SalesBundle/Controller"
+    type:     annotation
