[Profile] over ride form and redesign edit and change password

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -80,3 +80,6 @@ fos_user:
     registration:
         form:
             type: CoreBundle\Form\Type\RegistrationFormType
+    profile:
+        form:
+            type: CoreBundle\Form\Type\ProfileFormType
