--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -41,6 +41,8 @@ framework:
 twig:
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
+    globals:
+        site_title: E-commerce
 
 # Doctrine Configuration
 doctrine:
