--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
     },
     "require": {
         "php": ">=5.5.9",
+        "doctrine/data-fixtures": "^1.1",
         "doctrine/doctrine-bundle": "^1.6",
+        "doctrine/doctrine-fixtures-bundle": "^2.3",
         "doctrine/orm": "^2.5",
         "friendsofsymfony/user-bundle": "~2.0",
         "incenteev/composer-parameter-handler": "^2.0",
