--- a/src/InventoryBundle/Resources/config/services.yml
+++ b/src/InventoryBundle/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
-#    inventory.example:
-#        class: InventoryBundle\Example
-#        arguments: ["@service_id", "plain_value", "%parameter%"]
+    inventory.product_model:
+        class: InventoryBundle\Model\ProductModel
+        arguments: ['@service_container']
